# tau-factor

./: .gitignore  LICENSE  Procfile  README.md  convert_sql.py  manage.py  pyproject.toml  requirements.txt
comments/: admin.py  filters.py  models.py  non_persistent_models.py  request_serializers.py  serializers.py  services.py  urls.py  views.py
comments/migrations/: 0001_initial.py
common/: defines.py
courses/: admin.py  defines.py  exceptions.py  filters.py  models.py  non_persistent_models.py  request_serializers.py  serializers.py  services.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_course_code.py
courses/serializers/: __init__.py  common_serializers.py  downstream_serializers.py  upstream_serializers.py
extension/: apps.py  defines.py  exceptions.py  serializers.py  urls.py  views.py
fe/: apps.py  index.html  urls.py  views.py
fe/css/: styles.css
fe/templates/: index.html
grades/: admin.py  apps.py  defines.py  filters.py  models.py  non_persistent_models.py  request_serializers.py  serializers.py  services.py  urls.py  views.py
grades/migrations/: 0001_initial.py
ratings/: admin.py  apps.py  defines.py  filters.py  models.py  request_serializers.py  serializers.py  services.py  urls.py  views.py
ratings/migrations/: 0001_initial.py
staticfiles/js/: js.js
syllabus/hidden/: defines.py  non_persistent_models.py  utils.py  (+4 more)
tau_factor/: asgi.py  development_environment.py  environment.py  settings.py  urls.py  wsgi.py
teachers/: apps.py  defines.py  models.py  services.py
utils/: locks_utils.py
(+6 files in other folders)
